Fix nav wrap

--- a/src/css/blocks/nav.scss
+++ b/src/css/blocks/nav.scss
@@ -28,7 +28,6 @@
 
 @media (max-width: 768px) {
     .nav {
-        flex-wrap: wrap;
         justify-content: center;
     }
 }
